# webserver

./: CMakeLists.txt  ConfigParser.cpp  ConfigParser.hpp  Makefile  README.md  Route.cpp  Route.hpp  ServerConfig.hpp  chooseserver.cpp  client.cpp  default.conf  main.cpp  test.conf  utils.cpp  utils.hpp  webserv  z
!for_tests/: server  test_server.cpp
!for_tests/cgi/: HandlerCGI.cpp  HandlerCGI.hpp
!for_tests/cookie/: Cookie.cpp
!for_tests/http/: Connect.cpp  Connect.hpp  Connections.cpp  Request.cpp  RequestData.cpp  RequestData.hpp  Responce.cpp  Responce.hpp
ConfigParser/: GetServer.cpp  GetServer.hpp  Route.cpp  Route.hpp  ServerConfig.cpp  ServerConfig.hpp  chooseserver.cpp  default.conf  errors.txt  main.cpp  test.conf
Msimon/: default.conf  server  test_server.cpp
YoupiBanane/: test.php
cgi/: HandlerCGI.cpp  HandlerCGI.hpp  request_body  test.py
cookie/: Cookie.cpp  Cookie.hpp  Session.cpp  Session.hpp
http/: Connect.cpp  Connect.hpp  Connections.cpp  Connections.hpp  Request.cpp  Request.hpp  RequestData.hpp  Responce.cpp  Responce.hpp  client.cpp
msimon/: Content.cpp  Content.hpp  Head.cpp  Head.hpp  Request.cpp  Request.hpp  client  http.cpp  http.hpp  http_send.cpp  httpc.cpp  httpc.hpp  post_test.html  server  test_server.cpp
my_files/: default.conf  server  test.conf  test_server.cpp
parser/: ConfigParser.cpp  GetServer.cpp  GetServer.hpp  Route.cpp  Route.hpp  ServerConfig.cpp  ServerConfig.hpp  utils.cpp
server/: RequestHandler.cpp  RequestHandler.hpp  ServerManager.cpp  ServerManager.hpp  Socket.cpp  Socket.hpp
(+109 files in other folders)
